# multitask

./: README.md  config.py  demo.ipynb  main.py  multitask_ppo.py  pyproject.toml  train_baseline.py  train_multitask.py
envs/: __init__.py  multitask_wrapper.py
envs/tasks/: __init__.py  panda_base.py  peg_insert.py  pick_place.py  push.py  reach.py
evaluation/: __init__.py  compare.py  render.py
logs/multitask_ppo_20260111_192220/reach/: events.out.tfevents.1768188140.Revanths-MacBook-Air.local
logs/multitask_ppo_20260111_193009/reach/: events.out.tfevents.1768188609.Revanths-MacBook-Air.local
logs/multitask_ppo_20260111_195812/reach/: events.out.tfevents.1768190292.Revanths-MacBook-Air.local
logs/multitask_ppo_20260111_201106/reach/: events.out.tfevents.1768191066.Revanths-MacBook-Air.local
logs/multitask_ppo_20260111_203844/reach/: events.out.tfevents.1768192724.Revanths-MacBook-Air.local
logs/multitask_ppo_20260111_205654/reach/: events.out.tfevents.1768193814.Revanths-MacBook-Air.local
