[project]
name = "multitask"
version = "0.1.0"
description = "Multi-Task Manipulation with Shared Representation Learning using MJX and PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playground>=0.1.0",
    "ml-collections>=0.1.1",
    "tensorboardX>=2.6",
    "tensorboard>=2.15.0",
    "orbax-checkpoint>=0.5.0",
    "mediapy>=1.2.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "opencv-python>=4.8.0",
]

[project.scripts]
multitask = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ipython>=8.20.0",
]
